# ProductSync

./: AGENTS.MD  Dockerfile  Makefile  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
app/: discord_bot.py
app/api/: __init__.py  app.py  routes.py
app/bots/: discord_bot.py
app/models/: __init__.py  cluster.py  database.py  feedback.py  initiative.py  label.py  product_area.py  source_user.py
app/nlp/: __init__.py  classifier.py  embedder.py  preprocessor.py
app/workers/: __init__.py  actions_worker.py  ingest_worker.py  nlu_worker.py  priority_worker.py
config/: config.py
migrations/: env.py
tests/: __init__.py  test_basic.py
